section on adcensus implementation description added

--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -459,5 +459,25 @@
  publisher={Elsevier}
 }
 
+@article{hirseval09,
+  title={Evaluation of stereo matching costs on images with radiometric differences},
+  author={Hirschmuller, Heiko and Scharstein, Daniel},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={31},
+  number={9},
+  pages={1582--1599},
+  year={2009},
+  publisher={IEEE}
+}
 
+@article{zha09,
+  title={Cross-based local stereo matching using orthogonal integral images},
+    author={Zhang, Ke and Lu, Jiangbo and Lafruit, Gauthier},
+      journal={Circuits and Systems for Video Technology, IEEE Transactions on},
+        volume={19},
+	  number={7},
+	    pages={1073--1079},
+	      year={2009},
+	        publisher={IEEE}
+		}
 
