--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -710,7 +710,7 @@ unrefined & 147.84 \\ \hline
 
 \subsection{Discretization Degree of Disparity Values}
 According to different studies \cite{dras96, kru10,azuma01}, some other factors such as issues associated with the environment, display device, and capturing device
-can also affect the perception of depth in the visual system. As a result, the ability to detect the difference in depth and accurately estimate the
+can also affect the perception of depth in the visual system. As a result, the ability to detect the difference in depth and to accurately estimate the
 depth of different points, in practice,
 do not merely depend on the implemented discretization level of the disparity values in the stereo correspondence algorithm.
 In order to investigate the validity of this statement, we conducted the following experiment. In this experiment we defined some stereoacuity thresholds. 
@@ -728,7 +728,7 @@ different pixels, Figure \ref{fig:scanline}.
 
 After finding the minimum value in each image, a global minimum is sought between all the computed values from different images.
 The value we found for a group of twelve images selected from our dataset with the size of $1242\times375$ and the focal length of $721$ 
-millimeters was $0.0022$ arcmins.
+pixels was $0.0022$ arcmins.
 After finding this minimum and defining our thresholds, we apply a nearly similar operation on the disparity results of the same group of images 
 from each of the sample algorithms.
 In this process, while moving through each image, for those pixels whose generated disparity is close to the ground truth disparity, 
@@ -780,16 +780,17 @@ starts to converge at the value of approximately $0.4$ arcmins.
 We also observe that for the values below this threshold the average detected pixels are very small and for some values, 
 such as the minimum detectable threshold in ground truth,
 both algorithms are not capable of detecting any change in depth values. 
-This implies that, regardless of the accuracy resolution of the algorithms, which is $1/8$th of a pixel for SGBM and $1/16$th of a pixel for ADCensusB, approximately equal to
-$0.6$ arcmins and $0.3$ arcmins, respectively, for Kitti images based on the camera parameters and the geometrical relation presented in Figure \ref{fig:camResolution} and 
+This implies that, regardless of the accuracy resolution of the algorithms, which is $1/8$th of a pixel for SGBM, approximately $0.6$ arcmins,
+and $1/16$th of a pixel for ADCensusB, approximately $0.3$ arcmins, for Kitti images based on the camera parameters and the geometrical 
+relation presented in Figure \ref{fig:camResolution} and 
 Equation \ref{eq:algResolution}, some changes in 
-depth in the real world cannot be still detected by the algorithm. This effect might be due to the constraints of the sensor, that is, the errors associated with the capturing 
+depth in the real world still cannot be detected by the algorithm. This effect might be due to the constraints of the sensor, that is, the errors associated with the capturing 
 device and its resolution, or the environmental noise. 
 
 \begin{figure}[H]
 \centering
 \includegraphics{algthreshBoth}
-\caption{Average detected pixels by SGBM and ADCensusB for specific stereoacuity thresholds marked on each curve}
+\caption{Average of detected pixels by SGBM and ADCensusB for specific stereoacuity thresholds marked on each curve for a group of 12 images}
 \label{fig:algthresh}
 \end{figure} 
 \begin{figure}[H]
@@ -807,7 +808,7 @@ In Figure \ref{fig:camResolution}, $w$ is the image width and $f$ is the focal l
 \theta = \arctan(\frac{pixel\_resolution}{focal\_length})
 \end{align}
 
-For the image size of $1242\times375$ pixels and focal length of $721$ millimeters, and based on the resolution of SGBM and ADCensusB in the estimation of the disparity values, 
+For the image size of $1242\times375$ pixels and focal length of $721$ pixels, and based on the resolution of SGBM and ADCensusB in the estimation of the disparity values, 
 the minimum and maximum detectable disparity, that is, at the center and at the boundary of the image, respectively, 
 in terms of effective stereoacuity are as follows:
 
@@ -835,14 +836,14 @@ ADCensusB: \theta_{min} &= \arctan (\frac{\frac{1}{16}\times(\frac{1242}{2})}{72
 However, as can be seen, the minimum and maximum angular resolution in the image are not considerably different.
 
 As a result of this experiment, we can conclude that in order to achieve 
-more accurate depth values in the stereo algorithms and better detectability of their changes, 
-in areas of depth discontinuities, that is, to obtain a lower 
+more accurate depth values in the stereo algorithms 
+and correctly detect the difference between depth values, that is, to obtain a lower 
 threshold of depth changes
 closer to the actual resolution of the implemented algorithm, using higher resolution devices and considering their robustness to noise are also essential.
 However, the experimental results presented earlier in this chapter
-show that despite various types of error relevant to the capturing device, environmental noise, and the accuracy of the stereo correspondence algorithm
-in the estimation of disparity values, the effect of such error on the results, depending on the distance of the object from the observer, 
-will not be perceptible in the HVS for outdoor AR applications.
+show that despite various types of error relevant to the capturing device, environmental noise, and the actual accuracy of the stereo correspondence algorithm
+in the estimation of disparity values, the effect of such errors on the results, will still be imperceptible to the HVS for outdoor AR applications for most cases,
+especially where objects are distant from the observer.
 
 \section{Overview}
 Table \ref{tab:compare} shows an overview of the difference between our proposed evaluation approach and the other evaluation models, Middlebury
