evaluation chapter updated with algthresh figure

--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -790,7 +790,8 @@ device and its resolution, or the environmental noise.
 \begin{figure}[H]
 \centering
 \includegraphics{algthreshBoth}
-\caption{Average of detected pixels by SGBM and ADCensusB for specific stereoacuity thresholds marked on each curve for a group of 12 images}
+\caption{Average of detected pixels by SGBM and ADCensusB for specific stereoacuity thresholds marked on each curve for a group of 12 images; the vertical blue line
+shows the approximate threshold after which the average of detected pixels converge}
 \label{fig:algthresh}
 \end{figure} 
 \begin{figure}[H]
@@ -798,6 +799,7 @@ device and its resolution, or the environmental noise.
 \includegraphics{camRes}
 \caption{Resolution of image in angular disparity}
 \label{fig:camResolution}
+\vspace{-5mm}
 \end{figure}
 
 \noindent
